--- a/DatePickerExample/app/src/main/res/layout/date_picker_dialog.xml
+++ b/DatePickerExample/app/src/main/res/layout/date_picker_dialog.xml
@@ -1,29 +1,94 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#22585858"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:background="@android:color/white"
+        android:orientation="vertical">
 
-        <NumberPicker
-            android:id="@+id/picker_month"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/btn_change_filter"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_margin="8dp"
+                android:text="Lọc theo ngày"/>
+        </LinearLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp">
+
+            <DatePicker
+                android:id="@+id/date_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@style/MyDatePickerStyle"
+                android:visibility="visible" />
+
+            <LinearLayout
+                android:id="@+id/number_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <NumberPicker
+                    android:id="@+id/picker_month"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp">
+
+                </NumberPicker>
+
+                <NumberPicker
+                    android:id="@+id/picker_year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                </NumberPicker>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp">
+            android:orientation="horizontal">
 
-        </NumberPicker>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:textColor="@android:color/holo_orange_dark"
+                android:text="Huỷ"/>
 
-        <NumberPicker
-            android:id="@+id/picker_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@android:color/white"
+                android:text="Ok"/>
 
-        </NumberPicker>
+        </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
